2005-11-01  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JPopupMenu.java
	(setVisible): Pack the JPopupMenu before fetching the Popup
	instance. Otherwise the PopupFactory has the wrong size for
	its size check.

2005-11-01  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/JTable.java:
	(JTable(TableModel, TableColumnModel, ListSelectionModel)): Call 
	updateUI after initializeLocalVars.  Manually set the lead selection
	indices.

2005-11-01  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/plaf/basic/BasicFileChooserUI.java:
	(getApproveButtonText): First use the JFileChooser's approve button 
	text, but if it is null, then try otherwise.

2005-11-01  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* vm/reference/java/lang/VMThread.java (sleep): Don't round     
	ms and pass ns to Object.wait, fixes mauve test.
		
2005-11-01  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/JFileChooser.java:
	(getDialogTitle): Allow return of null.
	(getApproveButtonText): Likewise.
	(getFileView): Likewise.
	(getName): First try using the JFileChooser's FileView, if null, then
	pass call to UI.
	(getDescription): Likewise.
	(getTypeDescription): Likewise.
	(getIcon): Likewise.

2005-11-01  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/JTable.java:
	(JTable(TableModel, TableColumnModel, ListSelectionModel)): Set the 
	model before calling initializeLocalVars.

2005-11-01  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicCheckBoxMenuItemUI.java
	(BasicCheckBoxMenuItem): Moved code to BasicMenuItemUI.installDefaults
	(processMouseEvent): Added TODO comment. Not sure about the 
	correct implementation yet.
	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(initComponentDefaults): Removed MenuItem.checkIcon default. Only
	RadioButtonMenuItem's and CheckBoxMenuItem's have checkIcons.
	* javax/swing/plaf/basic/BasicMenuItemUI.java
	(installDefaults): Fixed to initialized checkIcon. If the menuItem is